# pynyairbnb

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  hyperparam_classification_report.csv  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/sample_data/: X_test.csv  test_df.csv  y_test.csv  y_train.csv
docs/sample_results/tables/: correlations_ranked.csv  dummy_classification_report.csv  hyperparam_classification_report.csv  knn_classification_report.csv
src/pynyairbnb/: __init__.py  data_preprocessing.py  plotting.py  pynyairbnb.py
tests/: test_data_preprocessing.py  test_plotting.py  test_pynyairbnb.py
