[tool.poetry]
name = "pynyairbnb"
version = "0.2.0"
description = "A package for DSCI 310 Group's Airbnb Analysis."
authors = ["DSCI 310 Group 9"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.2.1"
scikit-learn = ">=1.4.1.post1"
matplotlib = ">=3.8.3"
seaborn = ">=0.13.2"
numpy = ">=1.26.4"
scipy = ">=1.12.0"
click = ">=8.1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
jupyter = "^1.0.0"
pytest-mock = "^3.14.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
